Changelog
=========

3.1a2 - unreleased
------------------

- Added tests for SyncedLanguages vocabulary.
  [hannosch]

- Added test for I18NBaseFolder browser default behavior.
  [hannosch]

- Added tests for I18NBaseBTreeFolder.
  [hannosch]

- Removed all BBB imports for InitializeClass. We depend on Plone 3.3 which
  comes with Zope 2 versions with the forward compatible import locations, as
  introduced in Zope 2.10.8.
  [hannosch]

- Removed old type actions from example and test types.
  [hannosch]

- Added tests for I18NOrderedBaseFolder.
  [hannosch]

- Some PEP8 cleanup.
  [hannosch]

- Minor documentation updates.
  [hannosch]

3.1a1 - 2010-02-19
------------------

- Factor out filtering of "Language" parameter so it can be reused elsewhere.
  [hannosch, witsch]

- Made the manage_translations_form compatible with Plone 4 by replacing a
  call to referencebrowser_startupDirectory with hardcoding the current context
  as the startup directory.
  [huub_bouma]

- Added workflow transitions to the setup view to publish the language folders.
  [hannosch]

- Changed the setup view to give the folders native language titles.
  [hannosch]

- Added automatic setup of the language switcher to the setup view.
  [hannosch]

- Added new ``language-switcher`` view usable as a default view method for the
  Plone site object to dispatch to the appropriate language root folder.
  [hannosch]

- Added new ``language-setup-folders`` helper view to set up a regular structure
  of language root folders for each supported language each marked as a
  navigation root.
  [hannosch]

- Added more CSS classes to the language selector making it possible to target
  each language. Inspired by http://www.thirtysomething.it/.
  [hannosch]

- Only register the catalog export import handlers if they aren't already part
  of Archetypes. This avoids conflicts in Plone 4.0.
  [hannosch]

3.0.1 - 2010-02-02
------------------
