@@ -1,9 +1,0 @@
-<?xml version="1.0"?>
-<export-steps>
- <export-step id="languagetool"
-           handler="Products.PloneLanguageTool.exportimport.exportLanguageTool"
-           title="Plone Language Tool">
-  Export language settings.
- </export-step>
-</export-steps>
-
